--- a/package.json
+++ b/package.json
@@ -6,18 +6,23 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "test": "vitest",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "jsdom": "^24.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
-    "react-switch": "^7.0.0"
+    "react-switch": "^7.0.0",
+    "vitest": "^1.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
